Fix mobile column layout issues

--- a/_sass/haus/_content.scss
+++ b/_sass/haus/_content.scss
@@ -70,14 +70,7 @@
     background-color: $yellow;
     color: black;
     padding: .5rem 2rem;
-  }
-
-  h3 {
-    // background: $yellow;
-  }
-
-  li h3 {
-    background-color: $white;
+    margin-bottom: 1.5rem;
   }
 
   ul {
@@ -89,11 +82,11 @@
     padding: 0 .5rem;
 
     h3 {
-      margin: 0;
+      margin: 0 0 .5rem 0;
       border: 1px solid $black;
+      background-color: $white;
       color: $black;
       font-size: 1.25rem;
-      margin-bottom: .5rem;
     }
 
     p {
